--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,27 @@
-name: Build
+name: Build SvelteKit
 
 on:
   push:
-  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [16.x]
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Install Node.js
+      - uses: actions/checkout@v3
+
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 20
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-      - name: Install dependencies
-        run: pnpm install
+          node-version: ${{ matrix.node-version }}
 
-      - name: Build
-        run: pnpm run build
+      - name: Install dependencies & build
+        run: |
+          npm ci
+          npm run build
