--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,24 +1,24 @@
 name: Lint
 
-on:
-  push:
-  pull_request:
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [16.x]
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Install Node.js
+      - uses: actions/checkout@v3
+
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 20
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-      - name: Install dependencies
-        run: pnpm install
+          node-version: ${{ matrix.node-version }}
 
-      - name: Lint
-        run: pnpm run lint
+      - name: Install dependencies & run lint
+        run: |
+          npm ci
+          npm run lint
