--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"sweetalert2": "^11.7.27"
 	},
 	"type": "module",
 	"packageManager": "pnpm@8.6.2"
